--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <artifactId>tomcat-embed-core</artifactId>
       <version>9.0.36</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
